update manual icon and fix text alignment issues

--- a/assets/css/manual.css
+++ b/assets/css/manual.css
@@ -5,7 +5,6 @@ main,
     max-width: 720px;
     margin: 0 auto;
     padding: 0 16px;
-    text-align: center;
 }
 
 /*
